# fastapi-starter-dev-container

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
.devcontainer.dist/: devcontainer.json  docker-compose.yml
.github/workflows/: lint.yml
.vscode.dist/: launch.json  settings.json
app/: main.py  test.py
